tests/macros/password/choices.rs
fn main() {
    inquisition::questions![password { choices: todo!() }];
}
